--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
     <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-icon-72x72.png">
@@ -19,10 +20,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+
     <link rel="manifest" href="./manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+
     <title>React App</title>
   </head>
   <body>
